refactor: Players 필드 수정
-List<Player> -> Player bluePlayer, Player redPlayer 로 수정